--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.home_header {
+    background-image: url("./assets/images/background.png");
+    background-size: cover;
+    background-position: center;
+}
